src/objects/Revenue_Target__c.object
<CustomObject>
    <description>SAM Integration RT for reporting</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Revenue Target</relationshipLabel>
        <relationshipName>Revenue_Target</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency (MH)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GDP</fullName>
                </value>
                <value>
                    <fullName>YEN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>From_Date__c</fullName>
        <description>SAM RT Integration</description>
        <encryptionScheme>None</encryptionScheme>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>High__c</fullName>
        <description>SAM Integration</description>
        <label>High</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Low__c</fullName>
        <description>SAM Integration</description>
        <label>Low</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Realistic__c</fullName>
        <description>SAM Integration</description>
        <label>Realistic</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_ID__c</fullName>
        <description>SAM Integration - Target ID</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Target ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Date__c</fullName>
        <description>SAM Integration</description>
        <encryptionScheme>None</encryptionScheme>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <label>Revenue Target</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Revenue Target Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revenue Target</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>